correct z-index in header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ header{
   top:0;
   font-size: 11px;
   background: #0E325A;
-
+  z-index:1
 }
 
 
